   Use directory name as prefix for output filename when doing a
   directory diff.
   Don't remove filename extension for file diffs.
   Fix some memory leaks.
 * plugins/svndiff.c:
   Add a separate menu item for diff from the current directory.
   Disable file and directory diff menu items if the current document
   has no filename.
   Disable project menu item when no project is open.


2007-10-28  Enrico Tröger  <enrico.troeger@uvena.de>

 * doc/geany.txt, src/build.c, src/project.c, src/project.h:
   Add support for relative project base path.
   Improve and synchronize base path tooltips in project new and
   properties dialogs.
   Fix minor GUI annoyances in project dialogs.
 * plugins/export.c, plugins/filebrowser.c, plugins/pluginmacros.h,
   plugins/svndiff.c:
   Add macro project for app->project.
   Rename macro tm to tagm to avoid conflicts with tm struct of time.h.
   Fix a warning about shadowing a global symbol.
   Use plugin macros in Export and SVNDiff plugins.
 * src/treeviews.c, src/treeviews.h:
   Replace "Hide" popup menu items of the symbol and document list with
   "Show Document List" and "Show Symbol List" check menu items.


2007-10-26  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/svndiff.c, plugins/export.c, plugins/demoplugin.c,
   plugins/filebrowser.c, plugins/htmlchars.c, plugins/classbuilder.c:
   Make all plugins distributed with Geany have the same version number
   as Geany.
 * plugins/pluginmacros.h:
   Prevent conflict with document::encoding.
 * plugins/svndiff.c:
   Capitalize menu item text.
   Minor editing of some strings.
 * plugins/classbuilder.c:
   Capitalize menu item text.
 * plugins/filebrowser.c:
   Show icons only in the file browser toolbar.


2007-10-25  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * plugins/svndiff.c:
   Added feature to make a diff from an open project or a
   current directory.


2007-10-24  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
