@@ -13,6 +13,8 @@
    Disable file and directory diff menu items if the current document
    has no filename.
    Disable project menu item when no project is open.
+ * src/document.c:
+   Make Fold All/Unfold All attempt to scroll the current line in view.
 
 
 2007-10-28  Enrico Tröger  <enrico.troeger@uvena.de>
